# common-voice-bookbot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSES.md  README.md  Taskfile.yml  analizar_cv.py  analizar_mls.py  audio_utils.py  conftest.py  cv_metadata.py  descargar_cv.py  exportar_cv.py  exportar_dataset.py  mls_metadata.py  probar_speaker.py  probar_speaker_cv.py  pyproject.toml
docs/: descarga-common-voice-vps.md
docs/superpowers/plans/: 2026-06-24-mls-dataset-pipeline.md  2026-06-25-common-voice-support.md  2026-06-25-mozilla-data-collective.md
docs/superpowers/specs/: 2026-06-24-mls-dataset-pipeline-design.md  2026-06-25-common-voice-support-design.md  2026-06-25-mozilla-data-collective-design.md
tests/: test_audio_utils.py  test_cv_metadata.py  test_descargar_cv.py  test_exportar_cv.py  test_exportar_dataset.py  test_mls_metadata.py
