[project]
name = "common-voice-bookbot"
version = "0.1.0"
description = "Tooling to extract and prepare MLS Spanish voice data for piper-tts training"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.20.1",
    "librosa>=0.11.0",
    "pandas>=3.0.3",
    "soundfile>=0.14.0",
    "tqdm>=4.68.3",
    "pyarrow>=20.0.0",
    "pyloudnorm>=0.1.1",
    "datasets>=3.6.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
