[project]
name = "common-voice-bookbot"
version = "0.1.0"
description = "Tooling to extract and prepare MLS Spanish voice data for piper-tts training"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.20.1",
    "librosa>=0.11.0",
    "pandas>=3.0.3",
    "soundfile>=0.14.0",
    "tqdm>=4.68.3",
    "pyarrow>=20.0.0",
    "pyloudnorm>=0.1.1",
    "datasets>=3.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "av>=14.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: tests that require internet access and credentials (HF_TOKEN or MDC_API_KEY)",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
